<resources>
    <string name="app_name">Drawer</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="delete">Delete</string>
    <string name="add_frame">Add frame</string>
    <string name="frames">Frames</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="pencil">Pencil</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="selection">Selection</string>
    <string name="color_picker">Color picker</string>
    <string name="color_pallete">Color pallete</string>
    <string name="white_color">White color</string>
    <string name="red_color">Red color</string>
    <string name="black_color">Black color</string>
    <string name="blue_color">Blue color</string>
</resources>