<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">


        <ImageButton
            android:id="@+id/undo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/undo"
            android:src="@drawable/ic_undo"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/redo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/redo"
            android:src="@drawable/ic_redo"
            app:tint="@android:color/white" />


        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_delete"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/add_frame_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_frame"
            android:src="@drawable/ic_add_frame"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/frames_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/frames"
            android:src="@drawable/ic_frames"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_pause"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play"
            app:tint="@android:color/white" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/canvas_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/top_toolbar"
        android:layout_weight="1"
        android:padding="16dp">

        <com.example.drawer.CanvasView
            android:id="@+id/canvas_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/paper_texture" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/pencil_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/pencil"
            android:src="@drawable/ic_pencil"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/brush_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/brush"
            android:src="@drawable/ic_brush"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/eraser_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eraser"
            android:src="@drawable/ic_eraser"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/selection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/selection"
            android:src="@drawable/ic_selection"
            app:tint="@android:color/white" />


        <ImageButton
            android:id="@+id/color_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/color_picker"
            android:src="@drawable/ic_color_picker" />
    </LinearLayout>
</RelativeLayout>
